notebook with embeddings added

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -1642,8 +1642,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3cfbcae0-2176-47e4-9d42-072eae4acb6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: torch\n",
+      "Version: 2.7.1+cu126\n",
+      "Summary: Tensors and Dynamic neural networks in Python with strong GPU acceleration\n",
+      "Home-page: https://pytorch.org/\n",
+      "Author: PyTorch Team\n",
+      "Author-email: packages@pytorch.org\n",
+      "License: BSD-3-Clause\n",
+      "Location: C:\\Users\\tonmo\\Development\\AI\\env\\Lib\\site-packages\n",
+      "Requires: filelock, fsspec, jinja2, networkx, setuptools, sympy, typing-extensions\n",
+      "Required-by: sentence-transformers, torchaudio, torchvision\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show torch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0082aba9-d951-4244-b6b7-10fc2831da4d",
    "metadata": {},
    "outputs": [],
    "source": []
